Made some fixes to the CSS. Added navbar collapse. Fixed some responsive errors.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,11 +3,13 @@
     --light-blue: #A4E8E0;
     --cyan: #4CD7D0;
     --dark-yellow: #E1C340;
-    --dogfont: Verdana, Geneva, Tahoma, sans-serif;
+    --dogfont: 'Poppins', sans-serif;
+    --text: #32495b;
 }
 
 * {
     font-family: 'Poppins', sans-serif;
+    color: var(--text);
 }
 
 .navbar-custom {
@@ -25,15 +27,38 @@ a {
     text-shadow: var(--yellow);
     font-family: var(--dogfont);
 }
+ .title {
+    margin-left: 5px;
+    max-width: 350px;
+    min-width: 230px;
+ }
+
+ img.title {
+    max-width: 280px;
+    min-width: 230px;
+    justify-content: center;
+ }
+
+ #create-h2 {
+    text-align: center;
+ }
 
 .bg-image {
     background-image: url('../image/dogs.jpg');
     background-attachment: fixed;
-    min-height: 100vh;
+    min-height: 100vh; 
     background-position: center;
     background-size: cover;
     background-repeat: repeat;
-    position: relative;
+    position: relative; 
+}
+ .nav-links {
+    font-size: 20px;
+    color: var(--text);
+
+ }
+.ct-ac-btn {
+    margin-left: 0;
 }
 
 #login-card,
@@ -45,16 +70,19 @@ a {
     border-color: var(--cyan);
 }
 
+placeholder {
+    font-size: 14px;
+}
 
 .btn-primary {
     font-style: bolder;
     background-color: var(--cyan);
-    color: black;
+    color: var(--text);
 }
 
 .btn-primary:hover {
     background-color: var(--dark-yellow);
-    color: black;
+    color: var(--text);
 }
 
 .btn-secondary {
@@ -70,6 +98,11 @@ a {
     background-color: var(--dark-yellow);
     color: white;
 }
+#logo {
+    border-style: groove;
+    border-color: var(--cyan);
+    border-radius: 6px;
+}
 
 .card {
     background-color: var(--light-blue);
@@ -79,6 +112,11 @@ footer {
     color: --cyan;
     background-color: var(--yellow);
     font-size: .625rem;
+}
+
+.form-input{
+    height: 40px;
+    background-color: aliceblue;
 }
 
 .justify-content-center {
@@ -93,16 +131,31 @@ footer {
 }
 
 .file-upload-button {
-    background-color: #4CD7D0;
+    background-color: #4CD7D0 !important;
+}
+input#image {
+    padding-left: 75px;
 }
 
+input#file-upload-button {
+    background-color: var(--cyan);
+}
 textarea {
     width: 80%;
     height: 100px;
 }
 
+.create-post-title {
+    color: #019090;
+    margin-bottom: 20px;
+}
+
+.create-btn {
+    margin-top: 15px;
+}
+
 #comment-btn {
-    /* width: 30rem; */
+    width: 100px;
     background-color: #4CD7D0;
     border-radius: 0.375rem;
     /* margin-bottom: 20px; */
@@ -131,6 +184,11 @@ textarea {
     margin-bottom: 5px;
 }
 
+.add-bark {
+    margin-bottom: 0px;
+    padding: 10px;
+}
+
 .single-post-container {
     display: flex;
     justify-content: center;
@@ -157,7 +215,7 @@ textarea {
 }
 
 .log-dog {
-    border-color: black;
+    border-color: var(--text);
     border-style: groove;
 }
 
@@ -167,6 +225,15 @@ textarea {
 
 .img-responsive {
     width: 50%;
+}
+
+.avatar-list {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 30px;
+
 }
 
 .profile-container {
@@ -191,6 +258,10 @@ textarea {
 .submit-profile {
     text-align: center;
     margin-top: 6px;
+}
+
+.view-profile{
+    padding: 40px;
 }
 
 .info-block {
@@ -240,15 +311,18 @@ label {
     flex-wrap: wrap;
     flex-direction: column;
     width: 50%;
-    border-width: 1px;
-
+    margin-right: 3%;
 }
 
+.input-label {
+    min-width:95px; 
+}
 .post-input-title {
-    width: 100%;
+    width: 70%;
     height: 50px;
     border-radius: 4px;
     background-color: whitesmoke;
+    text-align: start;
 }
 
 #namerz {
@@ -266,7 +340,7 @@ label {
 
 .deletebtn:hover {
     background-color: var(--dark-yellow);
-    color: black;
+    color: var(--text);
 }
 
 #post-content {
@@ -283,7 +357,7 @@ label {
 
 #commentz {
     display: flex;
-    flex-direction: column;
+    align-self: flex-end;
     font-size: 14px;
 }
 
@@ -295,7 +369,9 @@ a {
 #footerz {
     display: flex;
     align-self: flex-end;
-    font-size: 12px;
+    font-size: 14px;
+    padding-bottom: 16px;
+    color: rgb(1, 144, 144);
 }
 
 textarea {
@@ -360,26 +436,3 @@ mainphotoz {
     margin-left: 10px;
 }
 
-#avatars-options {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-left: 10px;
-    justify-content: space-around;
-}
-
-#avatar {
-    margin-left: 10px;
-}
-
-#avatars-options {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-left: 10px;
-    justify-content: space-around;
-}
-
-#avatar {
-    margin-left: 10px;
-}
